# wm-genai-models-governance

./: .gitignore  pyproject.toml
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/demo/: page.tsx
frontend/src/app/evaluations/: page.tsx
frontend/src/app/models/: page.tsx
governance/app/: __init__.py  main.py  registry.py
models/compliance-checker/src/: __init__.py  checker.py
models/document-intelligence/src/: __init__.py  extractor.py  rag.py
models/meeting-summarizer/src/: __init__.py  summarizer.py
models/portfolio-risk-narrator/src/: __init__.py  narrator.py
models/regulatory-change-detector/src/: __init__.py  detector.py
