[project]
name = "wm-genai-models-governance"
version = "1.0.0"
description = "5 Production GenAI Models + Governance System for WM Risk Model Control"
requires-python = ">=3.13"
license = "LicenseRef-Proprietary"
authors = [{ name = "Farooq Ansari" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "openai>=1.58.0",
    "anthropic>=0.40.0",
    "langchain-core>=0.3.28",
    "langchain-openai>=0.3.0",
    "langchain-community>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.3.0",
    "tiktoken>=0.8.0",
    "httpx>=0.28.0",
    "structlog>=24.4.0",
    "orjson>=3.10.12",
    "python-multipart>=0.0.18",
    "jinja2>=3.1.4",
    "pyyaml>=6.0.2",
    "presidio-analyzer>=2.2.0",
    "presidio-anonymizer>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.setuptools.packages.find]
include = ["models*", "governance*"]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]
